[package]
name = "num-prime"
version = "0.4.3"
edition = "2018"

repository = "https://github.com/cmpute/num-prime"
keywords = ["mathematics", "primes", "number-theory", "bigint", "num"]
categories = ["cryptography", "science", "algorithms"]
documentation = "https://docs.rs/num-prime"
license = "Apache-2.0"
description = """
Generic and optimized primality test, factorization and various number theoretic functions with arbitrary precision based on `num`.
"""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = { version = "0.1.44", default-features = false }
num-traits = { version = "0.2.14", default-features = false, features = [
    "libm",
] }
# We use a custom fork until https://github.com/cmpute/num-modular/pull/3 is merged
num-modular = { git = "https://github.com/tdelabro/num-modular.git", branch = "no_std-standardization", default-features = false }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
rand = { git = "https://github.com/rust-random/rand", default-features = false, features = [
    "getrandom",
] }
lru = { version = "0.7.2" }
either = { version = "1.6.1", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = [
    "rand",
], optional = true }

[features]
default = ['std', 'big-table', 'big-int']
std = ['rand/std', 'rand/std_rng']
big-table = []
# TODO: use the new cargo feature to override the num-bigint option
big-int = ['num-bigint', 'num-modular/num-bigint']

[workspace]
members = ["bench"]

[package.metadata.docs.rs]
all-features = true
